[package]
name = "drawvis"
version = "0.1.0"
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = '0.4'
dotenv = '0.15'
serde = '1'
serde_derive = '1'
fehler = "1"
failure = '0.1'
mysql = '18'
image = '0.23'

